# GsJrys

./: README.md  __init__.py  config.py  draw.py  help.json  pyproject.toml  requirements.txt  utils.py
data/: jrys.json
data/backgroundFolder/: ba.txt  miku.txt  猫羽雫.txt  白圣女.txt  魔卡.txt
