[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscore-daily-fortune"
version = "1.0.0"
description = "每日运势插件 - GsCore机器人框架的运势卡片生成插件"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitHub Copilot", email = "noreply@github.com"}
]
keywords = ["gscore", "fortune", "bot", "plugin", "daily"]
requires-python = ">=3.8"

dependencies = [
    "pillow>=9.0.0,<11.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

# Poetry 配置
[tool.poetry]
name = "gscore-daily-fortune"
version = "1.0.0"
description = "每日运势插件 - GsCore机器人框架的运势卡片生成插件"
authors = ["GitHub Copilot <noreply@github.com>"]
readme = "README.md"
license = "MIT"
keywords = ["gscore", "fortune", "bot", "plugin", "daily"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^9.0.0"
aiohttp = "^3.8.0"
urllib3 = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^22.0.0"
flake8 = "^5.0.0"
mypy = "^1.0.0"

# 代码格式化配置
[tool.black]
line-length = 88
target-version = ["py38"]
include = "\\.pyi?$"

# 类型检查配置
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"